--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "type": "module",
   "main": "index.js",
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.5",
     "prettier": "^2.6.2"
   },
   "scripts": {
